<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="5dp"
    app:cardBackgroundColor="#009688"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="10dp"
            android:weightSum="7">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/CountryName"
                android:textColor="@color/design_default_color_on_primary" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/Cases"
                android:textColor="@color/design_default_color_on_primary" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/NewCases"
                android:textColor="@color/design_default_color_on_primary" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/TotalRecovered"
                android:textColor="@color/design_default_color_on_primary" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/DeathCases"
                android:textColor="@color/design_default_color_on_primary" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/ShowStatistics"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="10dp"
            android:weightSum="7">

            <TextView
                android:id="@+id/country_name_txv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cases_txv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/new_cases_txv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/total_recovered_txv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/deaths_txv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="18sp" />

            <Button
                android:id="@+id/statisticsBtn"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@drawable/statistics" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>